--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Eziz Ømer</h1>
-                    <h2>Frontend Utvikler</h2>
+                    <h2>UX og Frontend Utvikler</h2>
                     <p>Liker å progammere i både front- og backend. Er alltid positiv til ny læring innen utvikling. 
                         Ellers på fritiden går tida mye ut på trening og videospill.
                         <br>
@@ -57,10 +57,11 @@
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Eirik Skogland Nedland</h1>
-                    <h2>Student</h2>
+                    <h2>Fullstack Utvikler</h2>
                     <p>Jeg studerer IT og informasjonssystemer bachelor grad ved Universitetetet i Agder. 
                         Jeg er ekstremt interessert i å lære mer om hvordan ulike informasjonssystemer fungerer, 
                         og hvordan kan ulike prossesser bli digitalissert og automatisert i fremtiden.
+                        Er spesielt interessert i SQL og databaser.
                         <br>
                         <i>C#, Java, Javascript, CSS, PHP, MySQL, T-SQL, Python </i>
                     </p>
@@ -76,72 +77,83 @@
                     <div class="mem-info-container">
                     <h1>Bastian Ege Tveit</h1>
                     <h2>Student</h2>
-                    <p>Jeg studerer IT og informasjonssystemer bachelor grad ved Universitetetet i Agder. 
-                        Jeg er ekstremt interessert i å lære mer om hvordan ulike informasjonssystemer fungerer, 
-                        og hvordan kan ulike prossesser bli digitalissert og automatisert i fremtiden.
+                    <p>Hallo, jeg heter Bastian, jeg er 21 år gammel og kommer fra Kristiansand. 
+                        Jeg begynte å studere IT ved UiA rett etter videregående og har nå gått der i 2 år. 
+                        Til nå har jeg vært innom forskjellige kodespråk, 
+                        lært om hensikten med det vi gjør og fått generell kunnskap om hva slags betydning 
+                        teknologi har for oss i nåtiden og framtiden.  løpet av videregående hadde jeg utveksling til Japan. 
+                        Der lærte jeg om en ny kultur, språk, og mye annet. Jeg har også en liten deltidsjobb på Joker. 
                         <br>
-                        <i>C#, Java, Javascript, CSS, PHP, MySQL, T-SQL, Python </i>
+                        <i>HTML, CSS, Java, JavaScript, Docker, MariaDB og MySql </i>
                     </p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/eirik-skogland-nedland-7b5919201/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://github.com/EirikSNedland" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://www.linkedin.com/in/bastian-tveit-97a9b328a/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/Munpun" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                     </div>
-                    <img src="assets/members/eirik.jpg" class="memberpic" alt="Bile av: Eirik Skogland Nedland">
+                    <img src="assets/members/bastian.jpg" class="memberpic" alt="Bile av: Bastian Ege Tveit">
                 </div>
 
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Dominykas Zuoza</h1>
                     <h2>Student</h2>
-                    <p>Jeg studerer IT og informasjonssystemer bachelor grad ved Universitetetet i Agder. 
-                        Jeg er ekstremt interessert i å lære mer om hvordan ulike informasjonssystemer fungerer, 
-                        og hvordan kan ulike prossesser bli digitalissert og automatisert i fremtiden.
+                    <p>Jeg er 21 år gammel, og er opprinnelig fra Litauen, men har bodd i Norge i mer enn 10 år nå. 
+                        Ved siden av studiet, jobber jeg som læringsassistent i tidligere fag, 
+                        og som teknisk vakt i eksamenskontoret. 
+                        Jeg er god i programmering, troubleshooting, og har jobbet med datamaskiner siden jeg var ung.
+                        Etter dette studiet, planlegger jeg å ta en master i cybersikkerhet. 
                         <br>
-                        <i>C#, Java, Javascript, CSS, PHP, MySQL, T-SQL, Python </i>
+                        <i>Golang, C#, Java, Python, Javascript, ASP.NET, Blazor or Razor pages</i>
                     </p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/eirik-skogland-nedland-7b5919201/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://github.com/EirikSNedland" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://github.com/DomNook" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                     </div>
-                    <img src="assets/members/eirik.jpg" class="memberpic" alt="Bile av: Eirik Skogland Nedland">
+                    <img src="assets/members/dominykas.jpg" class="memberpic" alt="Bile av: Dominykas Zuoza">
                 </div>
 
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Dung Katrine My Huynh</h1>
-                    <h2>Student</h2>
-                    <p>Jeg studerer IT og informasjonssystemer bachelor grad ved Universitetetet i Agder. 
-                        Jeg er ekstremt interessert i å lære mer om hvordan ulike informasjonssystemer fungerer, 
-                        og hvordan kan ulike prossesser bli digitalissert og automatisert i fremtiden.
+                    <h2>Fullstack Utvikler</h2>
+                    <p>Hei! Jeg heter Katrine og går tredje året bachelor i IT og informasjonssystemer. 
+                        Foreløpig jobber som mentor og læringsassistent for Universitetet i Agder og 
+                        har vært studenttillitsvalgt for klassen i 2 år og er foreløpig varatillitsvalgt. 
+                        I fritiden liker jeg å være aktiv og har en interesse i sport som fotball, volleyball og bordtennis. 
+                        Ved siden av har jeg vært styremedlem i NITO og er nåværende medlem i StartUiA. 
+                        Dette har gitt meg muligheten til å møte mange nye mennesker, samt lære fra mange. 
+                        Innenfor IT har jeg en interesse innenfor UX/UI og databaser.
                         <br>
-                        <i>C#, Java, Javascript, CSS, PHP, MySQL, T-SQL, Python </i>
+                        <i>HTML, CSS, JavaScript, Java, Python, SQL, C#, ASP.NET MVC, Docker og Bootstrap.</i>
                     </p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/eirik-skogland-nedland-7b5919201/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://github.com/EirikSNedland" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://www.linkedin.com/in/katrine-h-b94933224/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://github.com/Kaduhuy" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                     </div>
-                    <img src="assets/members/eirik.jpg" class="memberpic" alt="Bile av: Eirik Skogland Nedland">
+                    <img src="assets/members/katrine.jpg" class="memberpic" alt="Bile av: Dung Katrine My Huynh">
                 </div>
 
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Eivind Hustad Fiske</h1>
                     <h2>Student</h2>
-                    <p>Jeg studerer IT og informasjonssystemer bachelor grad ved Universitetetet i Agder. 
-                        Jeg er ekstremt interessert i å lære mer om hvordan ulike informasjonssystemer fungerer, 
-                        og hvordan kan ulike prossesser bli digitalissert og automatisert i fremtiden.
+                    <p>JJeg er 23 år gammel og kommer fra Molde. Jeg startet på UiA i 2021, 
+                        og er nå på mitt siste år av bacheloren og har senere planer om å ta en master. 
+                        Jeg er ganske grei på programmering, og får som regel til det jeg setter meg til. 
+                        Jeg har lenge hatt en interesse i teknologi og datamaskiner, som er hvorfor jeg har valgt å gå denne veien. I fritiden liker jeg å henge med venner, spille spill og jobbe med bilen min. 
+                        I helgene så kjører jeg taxi for å tjene litt ekstra penger, og trives godt med det.
                         <br>
                         <i>C#, Java, Javascript, CSS, PHP, MySQL, T-SQL, Python </i>
                     </p>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/eirik-skogland-nedland-7b5919201/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.linkedin.com/in/eivind-fiske-64585528a/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                         <a href="https://github.com/EirikSNedland" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                     </div>
-                    <img src="assets/members/eirik.jpg" class="memberpic" alt="Bile av: Eirik Skogland Nedland">
+                    <img src="assets/members/eivind.jpg" class="memberpic" alt="Bile av: Eivind Hustad Fiske">
                 </div>
         </div>
     </section>
