--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <div class="home-content">
             <h1>Hei, oppdragsgiver</h1>
             <h3>3.års IT studenter</h3>
-            <p>Vi er en dedikert gruppe på tre studenter som har kommet sammen for å jobbe med bachlorprosjekt.
-                Vi er alle lidenskapelig opptatt av IT og ser frem til å jobbe med et prosjekt som fokuserer på sikkerhet, 
-                systemutvikling, eller Power-plattformen. Vi har høye ambisjoner for dette prosjektet og ser etter 
-                en oppdragsgiver som deler vår interesse for IT-sikkerhet, systemutvikling, eller Power-plattformen.
-                Vi er åpne for å utforske nye ideer og er ivrige etter å ta fatt på utfordrende oppgaver.
+            <p>Vi utgjør en engasjert gruppe bestående av seks studenter som har sluttet seg sammen for å 
+                samarbeide på vårt bachelorprosjekt. Vår felles lidenskap for IT driver oss, 
+                og vi ser frem til å fordype oss i et prosjekt som kretser rundt områder som sikkerhet, 
+                app- og systemutvikling, der vi bruker et agilt metodikk for å oppnå våre mål.
+                Vi har store ambisjoner for dette prosjektet og søker en oppdragsgiver som deler vår 
+                entusiasme i disse arenaene.
+                Vi er åpne for å utforske nye konsepter og er ivrige etter å takle utfordrende oppgaver.
             </p>
             <div class="button-box">
                 <a href="#about" class="home-button">Les Mer</a>
@@ -76,7 +78,7 @@
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Bastian Ege Tveit</h1>
-                    <h2>Student</h2>
+                    <h2>Backend Utvikler</h2>
                     <p>Hallo, jeg heter Bastian, jeg er 21 år gammel og kommer fra Kristiansand. 
                         Jeg begynte å studere IT ved UiA rett etter videregående og har nå gått der i 2 år. 
                         Til nå har jeg vært innom forskjellige kodespråk, 
@@ -97,7 +99,7 @@
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Dominykas Zuoza</h1>
-                    <h2>Student</h2>
+                    <h2>Backend/Fullstack Utvikler</h2>
                     <p>Jeg er 21 år gammel, og er opprinnelig fra Litauen, men har bodd i Norge i mer enn 10 år nå. 
                         Ved siden av studiet, jobber jeg som læringsassistent i tidligere fag, 
                         og som teknisk vakt i eksamenskontoret. 
@@ -139,18 +141,18 @@
                 <div class="member">
                     <div class="mem-info-container">
                     <h1>Eivind Hustad Fiske</h1>
-                    <h2>Student</h2>
+                    <h2>Fullstack Utvikler</h2>
                     <p>JJeg er 23 år gammel og kommer fra Molde. Jeg startet på UiA i 2021, 
                         og er nå på mitt siste år av bacheloren og har senere planer om å ta en master. 
                         Jeg er ganske grei på programmering, og får som regel til det jeg setter meg til. 
                         Jeg har lenge hatt en interesse i teknologi og datamaskiner, som er hvorfor jeg har valgt å gå denne veien. I fritiden liker jeg å henge med venner, spille spill og jobbe med bilen min. 
                         I helgene så kjører jeg taxi for å tjene litt ekstra penger, og trives godt med det.
                         <br>
-                        <i>C#, Java, Javascript, CSS, PHP, MySQL, T-SQL, Python </i>
+                        <i> Java, JavaScript, C#, PHP, Python og MariaDB</i>
                     </p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/eivind-fiske-64585528a/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                        <a href="https://github.com/EirikSNedland" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://github.com/eivindfiske" target="_blank"><i class='bx bxl-github'></i></a>
                     </div>
                     </div>
                     <img src="assets/members/eivind.jpg" class="memberpic" alt="Bile av: Eivind Hustad Fiske">
