--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </section>
     <footer class="footer">
         <div class="footer-content">
-            <h3>Gruppe II</h3>
+            <h3>Gruppe I</h3>
             <ul>
                 <li>
                     <a href="#home" class="active">Hjem</a>
