ikke ferdig med styling, men jaja

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav class="navbar">
             <a href="#home" class="bar">Hjem</a>
             <a href="#about" class="bar">Om Oss</a>
+            <a href="#reason" class="bar">Hvorfor Velge Oss?</a>
         </nav>
     </header>
     <section class="home" id="home">
@@ -159,6 +160,26 @@
                 </div>
         </div>
     </section>
+
+    <section class="reason" id="reason">
+        <div class="reason-content">
+            <h1>hvorfor velge oss?</h1>
+            <p>
+                Vår gruppe på seks personer fungerer utmerket av flere grunner. 
+                For det første, alle i gruppen har samme mål og høye forventninger til oss selv og gruppen, 
+                noe som skaper en felles drivkraft for suksess. 
+                Mange av oss har tidligere jobbet sammen på ulike prosjekter, 
+                noe som har bygget tillit og samarbeidsevne innad i gruppen. 
+                Vår brede kunnskap og kompetanseområder gir oss et solid grunnlag for å takle varierte utfordringer. 
+                Åpen kommunikasjon og ærlighet er kjernen i vårt samarbeid, 
+                og dette skaper et miljø der ideer og bekymringer fritt kan deles. Vår punktlighet, 
+                presisjon og etablerte rutiner sørger for at arbeidet utføres effektivt og strukturert. 
+                Samlet sett er vår gruppe vellykket takket være våre felles mål, erfaring sammen, kunnskap, 
+                kommunikasjon, ærlighet, punktlighet og gode rutiner.
+            </p>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer-content">
             <h3>Gruppe I</h3>
