Added group picture to web-page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <a href="#about" class="home-button">Les Mer</a>
             </div>
         </div>
+        <img src="assets/members/gruppeFoto.jpg" class="groupPhoto" alt="Bilde av alle gruppemedlemmer">
     </section>
 
     <section class="about" id="about">
